Fixed other pages navigation. Truncation still doesn't work

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -203,53 +203,29 @@ footer {
 
 .pagination {
   margin-top: 20px;
-
-  &__buttons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-
-    a {
-      text-decoration: none;
-    }
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
 }
 
 .button {
-  position: relative;
   display: inline-flex;
-  align-items: center;
   justify-content: center;
-  border-radius: 8px;
-  max-width: 40%;
-  padding: 0;
-  cursor: pointer;
   text-align: center;
-
-  + .button {
-    margin-left: 10px;
-  }
-
-  a {
-    display: flex;
-    padding: 8px 16px;
-    text-decoration: none;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-  }
+  width: 45%;
+  padding: 5px 5px;
 
   &__text {
+    min-width: 0;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
   }
-
   &.next .button__icon {
     margin-left: 8px;
   }
-
   &.previous .button__icon {
     margin-right: 8px;
   }
